# vega

./: .gitignore  COPYRIGHT  README.md  meson.build
.github/workflows/: meson-test.yml
subprojects/: .gitignore
test/: blockedMain.cc  delay.cc  meson.build  mockNio.cc  multipleWorkers.cc  promiseAll.cc  promiseCreate.cc  setTimeout.cc  throws.cc
test/io/: iouringFile.cc  meson.build
test/io/net/: ioUringHttpGet.cc  meson.build
vega/: Promise.h  PromiseAll.h  PromiseState.cc  PromiseState.h  Scheduler.cc  Scheduler.h  meson.build  vega.h
vega/io/: IoUring.cc  IoUring.h  meson.build
vega/io/file/: File.cc  File.h  FileOpenMode.h  IoUringFile.cc  IoUringFile.h  StreamFile.cc  StreamFile.h  meson.build
vega/io/file/backend/: FileBackend.h  IoUringFile.cc  IoUringFile.h  StreamFile.cc  StreamFile.h  meson.build
vega/io/net/: Errors.h  Inet4Address.h  Inet4StreamSocket.h  IoUringInet4StreamSocket.cc  IoUringInet4StreamSocket.h  StreamSocket.h  meson.build
